5122 mpt_sas hangs forever with some kinds of malfunctioning drive